# hc-stats

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  simulate.yml
src/hc_stats/: __init__.py  analysis.py  deck.py  evaluator.py  game.py  simulation.py
src/hc_stats/scripts/: run_flop.py  run_preflop.py
tests/: test_analysis.py  test_deck.py  test_evaluator.py  test_game.py
