[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hc-stats"
version = "0.1.0"
description = "Monte Carlo simulation for Ultimate Texas Hold'em strategy analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "treys>=0.1.8",
    "numpy>=2.0",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[project.scripts]
hc-preflop  = "hc_stats.scripts.run_preflop:main"
hc-flop     = "hc_stats.scripts.run_flop:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hc_stats"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=hc_stats --cov-report=term-missing --cov-report=xml"
